# FileManagement

./: .gitignore  README.md  config.yaml  filemanagement.py  main.py  pyproject.toml
file_management/: file_manager.py
file_manager/: __main__.py
file_manager/commands/: __init__.py  extend.py  merge.py  rename.py
file_manager/core/: utils.py
