[tool.poetry]
name = "file-management"
version = "0.1.0"
description = ""
authors = ["Dylan Jung <Dj5822@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.14.0"


typer = "^0.15.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = 'file_management.file_manager:main'
verify = ''