[tool.poetry]
name = "file-management"
version = "0.1.0"
description = ""
authors = ["Dylan Jung <Dj5822@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.15.1"
inquirer = "^3.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"